# xor-crusher

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  check.yml
data/: manifest.ttl  xor_crusher.ttl
src/: lib.rs
